--- a/.github/workflows/ci_ruby.yml
+++ b/.github/workflows/ci_ruby.yml
@@ -20,7 +20,7 @@ jobs:
       CI: true
     strategy:
       matrix:
-        ruby-version: ['2.7', '3.0', '3.1', '3.2']
+        ruby-version: ['3.2', '3.3', '3.4']
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
